Added hidden leaderboards Added spec/class aliases Renamed MyStatsCommand to MyPositionCommand Finished MyPositionCommand (untested)